--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             margin: 0;
         }
         .card {
-            background: white;
+            background: pink;
             padding: 2rem;
             border-radius: 12px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.1);
@@ -23,8 +23,8 @@
         }
         .download-btn {
             display: inline-block;
-            background-color: #007bff;
-            color: white;
+            background-color: #ff00d4;
+            color: rgb(255, 161, 247);
             padding: 12px 24px;
             text-decoration: none;
             border-radius: 6px;
